...
import { field, text, date, readonly, relation } from '@nozbe/watermelondb/decorators';

export default class DetallePedido extends Model {
  static table = 'detalle_pedidos';

  static associations = {
    pedidos: { type: 'belongs_to' as const, key: 'pedido_id' },
  };

  @field('server_id') serverId!: number | null;
  @field('pedido_id') pedidoId!: string;
  @field('producto_id') productoId!: string;
  @field('producto_server_id') productoServerId!: number | null;
...
